UI/css/style.css
html,
body {
    margin:0;
    padding:0;
    height:100%;
    overflow: hidden;
    font-family: Ubuntu;
    font-size: 4vmin;
    background-color: black;
    color: white;

    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    touch-action: none;
}

.color-normal {
    color: white;
}

.color-danger {
    color: red;
}

.color-warning {
    color: #fc0;
}

.color-ok {
    color: #0c0;
}

.map {
    height: 100%;
    width: 100%;
}

#dataview {
    display: flex;
    overflow: hidden;
}

.tblDataView {
    width: 100%;
    align-self: center;
    margin-left: 1em;
    margin-right: 1em;
    margin-top: 0;
    margin-bottom: 0;
    border-spacing: 0;
}

.tblDataViewCellHeader {
    font-size: 0.5em;
    font-weight: bold;
    color: #bbb;
}

.smalltext {
    font-size: 0.7em;
}

.titleBox {
    align-self: center;
}

.statusIcon {
    height: 2em;
    width: 2em;
}

.rightIcon {
    right: 1em;
    position: absolute;
}

.textIcon {
    height: 1em;
    width: 1em;
}

/* Portrait */
@media only screen and (orientation : portrait)
{
    #container {
        min-height:100%;
        position:relative;
        overflow: hidden;
    }
    #dataview {
        height:35%;
        width:100%;
        position:absolute;
        bottom:65%;
    }
    #mapview {
        height:35%;
        width:100%;
        bottom:30%;
        position:absolute;
    }
    #hudview {
        height:30%;
        width:100%;
        bottom:0;
        position:absolute;
    }
    @supports(bottom: max(0px)) {
        #headerview {
            bottom: calc(90% + max(0px, env(safe-area-inset-bottom)));
        }
        #dataview {
            bottom: calc(65% + max(0px, env(safe-area-inset-bottom)));
        }
        #mapview {
            bottom: calc(30% + max(0px, env(safe-area-inset-bottom)));
        }
        #hudview {
            bottom: max(0px, env(safe-area-inset-bottom));
        }
    }
}

/* Font Stuff */
@font-face {
  font-family: 'Ubuntu';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(/css/Ubuntu-Regular.woff2) format('woff2'),
       url(/css/Ubuntu-Regular.ttf) format('ttf');
}


/* The sidebar menu */
.sidebar {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: #333;
    overflow-x: hidden;
    padding-top: 5vmin;
    transition: 0.5s;
  }

  /* The sidebar links */
  .sidebar a,
  #brokerSettings a,
  #uiSettings a
  {
    padding: 2vmin 2vmin 2vmin 4vmin;
    text-decoration: none;
    font-size: 1.5em;
    color: #CCC;
    display: block;
    transition: 0.3s;
    touch-action: manipulation;
    -webkit-tap-highlight-color: transparent;
    cursor: pointer;
  }
  
  .menufooter
  {
    padding: 2vmin 2vmin 2vmin 4vmin;
    text-decoration: none;
    font-size: 0.8em;
    color: #AAA;
    display: block;
    transition: 0.3s;
    bottom: 2em;
    position: absolute;
  }

  /* When you mouse over the navigation links, change their color */
  @media (hover: hover) {
    .sidebar a:hover,
    #brokerSettings a:hover,
    #uiSettings a:hover
    {
      color: #FFF;
    }
  }

  .sidebar a:focus,
  #brokerSettings a:focus,
  #uiSettings a:focus
  {
    color: #3F3;
  }

  /* Position and style the close button (top right corner) */
  .sidebar .closebtn,
  #brokerSettings .closebtn,
  #uiSettings .closebtn,
  #commandsMenu .closebtn,
  #securityMenu .closebtn
  {
    position: absolute;
    top: 0;
    right: 2vmin;
    font-size: 3em;
    margin-left: 2vmin;
  }
  
#brokerSettings,
#uiSettings,
#sessionsMenu,
#commandsMenu,
#securityMenu
{
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 2;
    top: 0;
    left: 0;
    background-color: #666;
    overflow-x: hidden;
    overflow-y: auto;
    padding-top: 4vmin;
    transition: 0.5s;
    font-size: 0.9em;
}

#brokerSettings p,
#uiSettings p,
#sessionsMenu p,
#commandsMenu p,
#securityMenu p
{
    margin-left: 5vmin;
    font-size: 1.5em;
    margin-bottom: 0.5em;
    margin-top: 0.5em;
}

#brokerSettings h3,
#uiSettings h3,
#sessionsMenu h3,
#commandsMenu h3,
#securityMenu h3
{
    margin-left: 5vmin;
    font-size: 1.5em;
    margin-bottom: 0.5em;
    margin-top: 0.5em;
}

#brokerSettings input[type=text],
#brokerSettings input[type=button],
#brokerSettings input[type=password],
#uiSettings input[type=text],
#uiSettings input[type=button],
#uiSettings input[type=password],
#sessionsMenu input[type=text],
#sessionsMenu input[type=button],
#commandsMenu input[type=button],
#securityMenu input[type=button],
#securityMenu textarea,
select
{
    font-size: 1em;
    width: 90%;
}

#brokerSettings input[type=button],
#uiSettings input[type=button],
#sessionsMenu input[type=button],
#commandsMenu input[type=button],
#securityMenu input[type=button]
{
    font-size: 1em;
    width: 90%;
    height: 2em;
    touch-action: manipulation;
    -webkit-tap-highlight-color: transparent;
    cursor: pointer;
}

#securityMenu textarea {
    font-family: monospace;
    font-size: 0.75em;
    height: 7em;
    resize: none;
    background-color: #444;
    color: #eee;
    border: 1px solid #888;
}

.settingsColumn {
    flex: 50%;
}

.settingsRow {
    display: flex;
}

@media only screen and (orientation : portrait)
{
    .settingsColumn {
        flex: inherit;
    }
    
    .settingsRow {
        display: inherit;
    }
    
}
/* ... */

